#11161 CI 상세조회 TextArea, Tag 수정 -> 일감 관련 분석 및 수정 진행 (TextArea)

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2035,6 +2035,10 @@ select {
   pointer-events: none;
 }
 
+.z-view-hover {
+  pointer-events: none;
+}
+
 /* _print.scss 
  *
  * 파일 경로 : document/_print.scss
