--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -54,7 +54,7 @@
             <span th:text="#{cmdb.ci.label.description}"></span>
         </label>
         <textarea id="ciDesc" class="z-textarea textarea-scroll-wrapper" rows="7" maxlength="500"
-                  th:text="${ciData?.ciDesc}" readonly></textarea>
+                  th:text="${ciData?.ciDesc}" disabled></textarea>
     </div>
     <!--클래스 -->
     <div class="flex-column z-view-row">
@@ -140,7 +140,7 @@
         // 스크롤바 추가
         OverlayScrollbars(document.querySelectorAll('.z-page-content'), { className: 'scrollbar' });
         OverlayScrollbars(document.querySelectorAll('textarea'), {
-            className: 'scrollbar',
+            className: 'scrollbar z-view-hover',
             textarea: {
                 dynHeight: false,
                 dynWidth: false,
