--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -109,7 +109,12 @@
                     const equalSpan = document.createElement('span');
                     equalSpan.classList.add('equal', 'align-center', 'col-1');
                     equalSpan.value = getColumnName(condition[data].conditionOperator);
-                    equalSpan.type = 'text';
+                    const operatorList = /*[[${operatorList}]]*/'';
+                    for (let i = 0; i < operatorList.length; i++) {
+                        if (equalSpan.value === operatorList[i].codeValue) {
+                            equalSpan.textContent = operatorList[i].codeName;
+                        }
+                    }
 
                     const valueInput = document.createElement('input');
                     valueInput.classList.add('z-input', 'col-6');
