--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <!-- 댓글 -->
-                <div class="z-token-panel z-token-comment" id="tokenComment">
+                <div class="z-token-panel z-token-comment" id="tokenComments">
                     <div class="z-comment-add flex-row align-items-start">
                         <textarea id="commentValue" class="z-textarea textarea-scroll-wrapper flex-fill mr-1" maxlength="200" rows="2" th:placeholder="#{comment.msg.enterComments}"></textarea>
                         <button class="z-button secondary" th:onclick="zFormToken.saveComment()" th:text="#{common.btn.register}" th:disabled="${mode == 'view'}"></button>
