#11286 [시스템관리 - 사용자] 검색 기능 이용 시 \(역슬래시) 입력시 400error -> 일감 관련 분석 및 수정 진행

--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -56,7 +56,7 @@
 
     // 폼 리스트 조회
     function getList(pageNum = 1) {
-        restSearchSubmit('GET', '/forms?searchValue=' + document.getElementById('searchValue').value + '&pageNum=' + pageNum);
+        restSearchSubmit('GET', '/forms?searchValue=' + encodeURIComponent(document.getElementById('searchValue').value) + '&pageNum=' + pageNum);
     }
 
     // 유효성 검증
