#11251 view화면 + 버튼 삭제

--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -87,6 +87,8 @@
             detailObject.querySelectorAll('button').forEach(function(object) { object.disabled = true; });
             detailObject.querySelectorAll('.i-delete').forEach(function(object) { object.parentElement.remove() });
 
+            document.querySelectorAll('.i-plus').forEach(function(object) { object.parentElement.remove() });
+
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
                 className: 'scrollbar',
