--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1315,6 +1315,13 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   background: #8B9094;
   cursor: pointer;
 }
+.z-input::-webkit-outer-spin-button, .z-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.z-input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .z-textarea {
   font-family: inherit;
