스크롤 디자인 적용

--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -401,6 +401,8 @@
                     getAttributeList(this.value, false);
                 });
                 getAttributeList(document.getElementById('attributeSearch').value, true);
+
+                OverlayScrollbars(document.querySelector('.z-list-body'), {className: 'scrollbar'});
             }
         });
         classAttributeListModal.show();
