#11097 동작 테스트 및 조회용 화면에서도 탭의 모든 기능은 동작하도록 수정.

--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -74,7 +74,7 @@
                 <!-- 태그 -->
                 <div class="z-token-panel z-token-tag" id="tokenTag">
                     <div class="tag-input">
-                        <input type="text" class="z-input" id="tokenTags" th:readonly="${mode == 'view'}" />
+                        <input type="text" class="z-input" id="tokenTags" th:value="${tagList}" />
                     </div>
                 </div>
             </div>
