--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -96,6 +96,12 @@
                        th:disabled="${customCode?.pCode != null}">
             </div>
         </div>
+        <div class="flex-column z-edit-row">
+            <label for="sessionKey">
+                <span th:text="#{customCode.label.sessionKey}"></span>
+            </label>
+            <input type="text" id="sessionKey" class="z-input" maxlength="110" th:value="${customCode?.sessionKey}">
+        </div>
         <div class="flex-row justify-content-between edit-row">
             <div class="z-button-list">
                 <a class="z-button secondary" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
@@ -325,6 +331,7 @@
                 let data = {
                     customCodeName: document.getElementById('customCodeName').value,
                     type: type,
+                    sessionKey: document.getElementById('sessionKey').value
                 };
                 if (type === 'table') {
                     data.targetTable = document.getElementById('targetTable').value;
