#11412 - 크론 표현식 양 옆 끝쪽 공백일 때 값으로 인식 현상 수정
 - trim으로 좌우 공백 제거

--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -362,10 +362,11 @@
         }
         return true;
     }
+
     /** 크론 표현식 검사 **/
     function cronSplit(cronExpression,msg, callbackFunc) {
         let elem = document.getElementById(cronExpression);
-        let cron = elem.value.split(' ');
+        let cron = elem.value.trim(' ').split(' ');
 
         const callback = (typeof callbackFunc === 'function') ? callbackFunc : function () {
             elem.focus();
