--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1706,6 +1706,8 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   -moz-border-radius: 0.125rem;
   padding: 0 1rem;
   vertical-align: middle;
+  /* Chrome, Safari, Edge */
+  /* Firefox */
 }
 .z-input::placeholder {
   color: #ABB0B5;
