--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -100,7 +100,12 @@
             <label for="sessionKey">
                 <span th:text="#{customCode.label.sessionKey}"></span>
             </label>
-            <input type="text" id="sessionKey" class="z-input" maxlength="110" th:value="${customCode?.sessionKey}">
+            <select class="z-select" id="sessionKey">
+                <option value="" th:text="#{customCode.label.notSelect}" selected="selected"></option>
+                <option th:each="code: ${sessionKeyList}" th:value="${code.codeValue}"
+                        th:text="${code.codeName}"
+                        th:selected="${code.codeValue} == ${customCode?.sessionKey}"></option>
+            </select>
         </div>
         <div class="flex-row justify-content-between edit-row">
             <div class="z-button-list">
@@ -331,10 +336,11 @@
         if (method === 'post' || method === 'put') {
             const type = getTypeId();
             if (emptyCheck(type)) {
+                const sessionKeySelectBox = document.getElementById('sessionKey');
                 let data = {
                     customCodeName: document.getElementById('customCodeName').value,
                     type: type,
-                    sessionKey: document.getElementById('sessionKey').value
+                    sessionKey: sessionKeySelectBox.options[sessionKeySelectBox.selectedIndex].value
                 };
                 if (type === 'table') {
                     data.targetTable = document.getElementById('targetTable').value;
