#11437 FAQ 분류항목 코드값으로 출력 - Faq 리스트, 포탈화면에서 FAQ쪽 수정

--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -15,7 +15,7 @@
         <div class="z-page-search pb-4">
             <select id="groupCode" name="groupCode" onchange="getFaqList(this.value, '')" class="col-5 mr-2">
                 <option th:each="category:${faqs.faqCategory}"
-                        th:text="#{|common.code.${category}|}" th:value="${category}"></option>
+                        th:text="${category.codeName}" th:value="${category.code}"></option>
             </select>
             <span id="spanTotalCount" class="search-count"></span>
         </div>
