--- a/src/main/resources/public/template/faq/faqList.html
+++ b/src/main/resources/public/template/faq/faqList.html
@@ -15,7 +15,7 @@
             <td style="width:100%" colspan="2" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
             <tr class="flex-row align-items-center" th:each="faq : ${faqs}">
-                <td style="width:20%;" class="align-left" th:text="#{|common.code.${faq.faqGroup}|}"></td>
+                <td style="width:20%;" class="align-left" th:text="${faq.faqGroupName}"></td>
                 <td style="width:80%;" class="align-left underline">
                     <a sec:authorize="hasAuthority('faq.update')" th:text="${faq.faqTitle}"
                        th:href="@{/faqs/{faqId}/edit(faqId=${faq.faqId})}"></a>
