--- a/src/main/resources/public/template/portal/faq/portalFaqList.html
+++ b/src/main/resources/public/template/portal/faq/portalFaqList.html
@@ -6,11 +6,11 @@
 
 	<details class="z-faq-group" th:each="faqGroup:${faqs.faqGroupList}" th:id="${faqGroup}">
 		<summary class="z-faq-group-title">
-			<span th:text="#{|common.code.${faqGroup}|}"></span>
+			<span th:text="${faqGroup.codeName}"></span>
 			<span class="z-icon i-plus"></span>
 			<span class="z-icon i-minus"></span>
 		</summary>
-		<details class="z-faq-row" th:each="faqT:${faqs.faqList}" th:if="${faqT.faqGroup} == ${faqGroup}" th:id="${faqT.faqId}">
+		<details class="z-faq-row" th:each="faqT:${faqs.faqList}" th:if="${faqT.faqGroup} == ${faqGroup.code}" th:id="${faqT.faqId}">
 			<summary class="z-faq-row-title" th:text="${faqT.faqTitle}"></summary>
 			<div class="horizontal-bar"></div>
 			<div class="z-faq-row-content" th:each="faqC:${faqs.faqList}" th:if="${faqC.faqId} == ${faqT.faqId}">
