자료실 카테고리 이름명 수정

--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -22,7 +22,7 @@
         </tr>
         <tr class="flex-row align-items-center" th:each="download : ${downloadList}">
             <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
-            <td style="width:10%;" class="align-center" th:text="#{${download.downloadCategory}}"></td>
+            <td style="width:10%;" class="align-center" th:text="${download.downloadCategoryName}"></td>
             <td style="width:45%;" class="align-left underline">
                 <a sec:authorize="!hasAuthority('download.update')" th:text="${download.downloadTitle}"
                    th:href="@{/downloads/{id}/view(id=${download.downloadId})}">
