--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -355,7 +355,7 @@
         const executeCycleType = document.getElementById('executeCycleType').value;
         if (executeCycleType === 'cron') {
             if (isEmpty('cronExpression', 'common.msg.requiredEnter')) { return false; }
-            if (cronSplit('cronExpression', 'scheduler.msg.cronValue')) { return false; }
+            if (cronSplit('cronExpression')) { return false; }
         } else { // fixedDelay, fixedRate
             if (isEmpty('executeCyclePeriod', 'common.msg.requiredEnter')) { return false; }
             if (isExistMinValue('executeCyclePeriod', 60000, 'common.msg.minValue')) { return false; }
@@ -364,25 +364,26 @@
     }
 
     /** 크론 표현식 검사 **/
-    function cronSplit(cronExpression, msg, callbackFunc) {
+    function cronSplit(cronExpression, callbackFunc) {
         let elem = document.getElementById(cronExpression);
-        let cron = elem.value.trim(' ').split(' ');
-
-        for (let i = 0; i <cron.length; i++) {
-            if (cron[i] === '') {
-                cron.splice(i, 1);
-                i--;
-            }
-        }
+        let regex = /(([0-5]?[0-9])|[,*\/\-])\s+(([0-5]?[0-9])|[,*\/\-])\s+(([0-2]?[0-9])|[,*\/\-])\s+(([1-3]?[0-9])|[,*\/\-?LW])\s+(([0-1]?[0-9])|[,*\/\-])\s+([0-6]|[,*?#L])/;
+        let cron = elem.value.replace(/ +/g, " ").trim(' ').split(' '); //공백 제거 및 배열로 저장
+        const callback = (typeof callbackFunc ==='function') ? callbackFunc : function () {
+            elem.focus();
+        };
 
         if (cron.length > 6) {
-            zAlert.warning(i18n.msg(msg), (typeof callbackFunc ==='function') ? callbackFunc : function () {
-                elem.focus();
-            });
+            zAlert.warning(i18n.msg('scheduler.msg.cronValue'), callback);
             return true;
-        } else if (cron.length < 6) {
-            for (let i = cron.length; i < 6; i++) {
-                cron.push('*');
+        }
+        if(regex.test(elem.value) == false) {
+            if (cron.length < 6) {
+                for (let i = cron.length; i < 6; i++) {
+                    cron.push('*');
+                }
+            } else{
+                zAlert.warning(i18n.msg('scheduler.msg.cronError'), callback);
+                return true;
             }
         }
 
