#11386 [라디오 버튼 컴포넌트] 필수값 선택 옵션 추가 : 말줄임 생기는 부분 수정

--- a/src/main/resources/public/scss/formDesigner/_properties.scss
+++ b/src/main/resources/public/scss/formDesigner/_properties.scss
@@ -236,6 +236,10 @@
   .z-option-table {
 
     .z-option-table-row {
+      td { padding: 0; }
+
+      .z-checkbox, .z-radio { margin: 0 0 0 0.5rem; } // 8px
+
       .z-input {
         width: 85%;
         padding: 0.75rem;
