--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -6381,6 +6381,12 @@ body.modal-active {
 .property .z-tab-panel .z-panels .z-panel .z-panel-individual > .property-group:last-child {
   border-top: 0.0625rem solid #CFD5D9;
 }
+.property .z-option-table .z-option-table-row td {
+  padding: 0;
+}
+.property .z-option-table .z-option-table-row .z-checkbox, .property .z-option-table .z-option-table-row .z-radio {
+  margin: 0 0 0 0.5rem;
+}
 .property .z-option-table .z-option-table-row .z-input {
   width: 85%;
   padding: 0.75rem;
