view 페이지 수정

--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -25,7 +25,7 @@
     <div class="flex-column z-view-row">
         <div class="view-content">
             <pre>
-                <span class="view-text" th:text="${download.downloadCategory}"/>
+                <span class="view-text" th:text="${download.downloadCategoryName}"/>
             </pre>
         </div>
     </div>
