--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -23,7 +23,7 @@
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-content flex-row">
-                <span class="view-text" th:text="${download.downloadCategory}"></span>
+                <span class="view-text" th:text="${download.downloadCategoryName}"></span>
             </div>
             <div class="horizontal-bar"></div>
             <div class="file-uploader-view">
