#11275 읽기 화면 디자인 - 사용자정의 차트, 보고서 템플릿 수정 (조회,편집화면 소스 통합)

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -125,7 +125,7 @@
     function getChart(chartId, chartType) {
         const opt = {
             method: 'get',
-            url: '/charts/' + chartId + '/view',
+            url: '/charts/' + chartId + '/preview',
             contentType: 'application/json',
             showProgressbar: false,
             callbackFunc: function (response) {
