--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -37,7 +37,7 @@
             </div>
             <div class="flex-column z-edit-row col-4">
                 <label class="field-label" th:text="#{chart.label.type}"></label>
-                <select id="typeSelectBox" name="typeSelectBox" onchange="setDisplay(this.value)">
+                <select id="typeSelectBox" name="typeSelectBox" onchange="setDisplay(this.value)" th:classappend="${view ? 'readonly' : ''}">
                     <option th:each="type:${code.type}" th:value="${type.codeValue}"
                             th:text="${type.codeName}" th:selected="${type.codeValue} == ${chart?.chartType}"></option>
                 </select>
@@ -45,12 +45,12 @@
             <div class="flex-column z-edit-row col-4">
                 <label class="field-label required" th:text="#{chart.label.name}"></label>
                 <input type="text" id="chartName" name="chartName" class="z-input" th:value="${chart?.chartName}"
-                       maxlength="100"/>
+                       maxlength="100" th:readonly="${view}" />
             </div>
             <div class="flex-column z-edit-row">
                 <label class="field-label" th:text="#{chart.label.description}"></label>
                 <input type="text" id="chartDesc" name="chartDesc" class="z-input" th:value="${chart?.chartDesc}"
-                       maxlength="100"/>
+                       maxlength="100" th:readonly="${view}" />
             </div>
             <div class="flex-column z-edit-row">
                 <h4 class="sub-title under-bar bold" th:text="#{chart.label.queryInfo}"></h4>
@@ -58,7 +58,7 @@
             <div class="flex-column z-edit-row col-3">
                 <!--/* 연산 */-->
                 <label class="field-label" th:text="#{chart.label.operation}"></label>
-                <select id="operationSelectBox" name="operationSelectBox">
+                <select id="operationSelectBox" name="operationSelectBox" th:classappend="${view ? 'readonly' : ''}">
                     <option th:each="operation:${code.operation}" th:value="${operation.codeValue}"
                             th:text="${operation.codeName}"
                             th:selected="${operation.codeValue} == ${chart?.chartConfig?.operation}"></option>
@@ -67,7 +67,7 @@
             <div class="flex-column z-edit-row col-3" id="periodUnit">
                 <!--/* 간격 */-->
                 <label id="periodUnitLabel" class="field-label required" th:text="#{chart.label.periodUnit}"></label>
-                <select id="periodUnitSelectBox" name="periodUnitSelectBox">
+                <select id="periodUnitSelectBox" name="periodUnitSelectBox" th:classappend="${view ? 'readonly' : ''}">
                     <option th:each="unit:${code.unit}" th:value="${unit.codeValue}"
                             th:text="${unit.codeName}"
                             th:selected="${unit.codeValue} == ${chart?.chartConfig?.periodUnit}"></option>
@@ -79,7 +79,7 @@
                     <div class="flex-column col-3 mr-5">
                         <label class="field-label required" th:text="#{chart.label.duration}"></label>
                         <div>
-                            <select id="rangeType" name="rangeType">
+                            <select id="rangeType" name="rangeType" th:classappend="${view ? 'readonly' : ''}">
                                 <option th:each="unit:${code.range}" th:value="${unit.codeValue}"
                                         th:text="${unit.codeName}"
                                         th:selected="${unit.codeValue} == ${chart?.chartConfig?.range?.type}"></option>
@@ -92,14 +92,14 @@
                             <label class="field-label required" th:text="#{common.label.startDate}"></label>
                             <div>
                                 <input type="text" class="z-input i-date-picker search-date" id="rangeFromDt"
-                                       name="rangeFromDt" th:value="${chart?.chartConfig?.range?.from}"/>
+                                       name="rangeFromDt" th:value="${chart?.chartConfig?.range?.from}" th:readonly="${view}" />
                             </div>
                         </div>
                         <div class="flex-column col-3">
                             <label class="field-label required" th:text="#{common.label.endDate}"></label>
                             <div>
                                 <input type="text" class="z-input i-date-picker search-date" id="rangeToDt"
-                                       name="rangeToDt" th:value="${chart?.chartConfig?.range?.to}"/>
+                                       name="rangeToDt" th:value="${chart?.chartConfig?.range?.to}" th:readonly="${view}" />
                             </div>
                         </div>
                     </div>
@@ -109,8 +109,8 @@
                 <!--/* 차트 대상 태그 */-->
                 <div class="flex-column col-6 mr-4">
                     <label class="field-label required" th:text="#{chart.label.targetTags}"></label>
-                    <input type="text" id="targetTags" name="targetTags" class="z-input col-pct-12"
-                           th:value="${chart?.chartConfig?.tags}"/>
+                    <input type="text" id="targetTags" name="targetTags" class="col-pct-12"
+                           th:value="${chart?.chartConfig?.tags}" th:readonly="${view}" th:classappend="${view}?'':'z-input'">
                 </div>
             </div>
             <div class="flex-column z-edit-row">
@@ -118,7 +118,7 @@
                 <div class="flex-column col-6">
                     <label id="groupLabel" class="field-label required" th:text="#{chart.label.group}"></label>
                     <input type="text" id="targetGroup" name="targetGroup" class="z-input"
-                           th:value="${chart?.chartConfig?.group}" maxlength="100"/>
+                           th:value="${chart?.chartConfig?.group}" maxlength="100" th:readonly="${view}" />
                 </div>
             </div>
             <div class="flex-row justify-content-between z-edit-row">
@@ -134,7 +134,7 @@
                             id="update"
                             class="z-button primary" onclick="saveChart('put')" th:text="#{common.btn.modify}">
                     </button>
-                    <button type="button" id="preview" class="z-button secondary"
+                    <button type="button" id="preview" class="z-button secondary" sec:authorize="hasAuthority('chart.update')"
                             onclick="previewChart()" th:text="#{common.btn.preview}">
                     </button>
                     <button sec:authorize="hasAuthority('chart.delete')" th:if="${chart?.chartId}" type="button"
