--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -366,26 +366,28 @@
     /** 크론 표현식 검사 **/
     function cronSplit(cronExpression, callbackFunc) {
         let elem = document.getElementById(cronExpression);
-        let regex = /(([0-5]?[0-9])|[,*\/\-])\s+(([0-5]?[0-9])|[,*\/\-])\s+(([0-2]?[0-9])|[,*\/\-])\s+(([1-3]?[0-9])|[,*\/\-?LW])\s+(([0-1]?[0-9])|[,*\/\-])\s+([0-6]|[,*?#L])/;
-        let cronValue = elem.value.replace(/ +/g, " ").trim(' ').split(' '); //공백 제거 및 배열로 저장
+        let regex = new RegExp(/^(\*|([1-5]?[0-9])) (\*|([1-5]?[0-9])) (\*|(1[0-9]|2[0-3])) (\*|([12]?[0-9]|3[0-1])) (\*|([1-9]|1[0-2])|(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)) (\*|([0-6])|(sun)|(mon)|(tue)|(wed)|(thu)|(fri)|(sat))$/i);
+        let cronValue = elem.value.replace(/ +/g, " ").trim().split(' '); //공백 제거 및 배열로 저장
         const callback = (typeof callbackFunc ==='function') ? callbackFunc : function () {
             elem.focus();
         };
+
         if (cronValue.length > 6) {
             zAlert.warning(i18n.msg('scheduler.msg.cronValue'), callback);
             return true;
         }
-        if(regex.test(elem.value) == false) {
-            if (cronValue.length < 6) {
-                for (let i = cron.length; i < 6; i++) {
-                    cronValue.push('*');
-                }
-            } else {
-                zAlert.warning(i18n.msg('scheduler.msg.cronError'), callback);
-                return true;
+        if (cronValue.length < 6) {
+            for (let i = cronValue.length; i < 6; i++) {
+                cronValue.push('*');
             }
         }
         elem.value = cronValue.join(' ');
+
+        if (!regex.test(elem.value)) {
+                zAlert.warning(i18n.msg('scheduler.msg.cronError'), callback);
+                return true;
+            }
+
         return false;
     }
 
